[package]
name = "jsonrpc"
version = "0.1.0"
authors = ["Sun <huachuang20@gmail.com>"]
edition = "2018"
description = "parse JSON-RPC (2.0) from TCP Bytes or deparse JSON-RPC to Bytes"
repository = "https://github.com/sunhuachuang/jsonrpc-codec"
keywords = ["http-codec", "tokio-codec", "request-codec", "response-codec"]
license = "MIT"

[dependencies]
http = "0.1"
httparse = "1.0"
bytes = "0.4"
byteorder = "1.2"
tokio-codec = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
