[package]
name = "jsonrpc-parse"
version = "0.1.2"
authors = ["Sun <huachuang20@gmail.com>"]
edition = "2018"
description = "parse JSON-RPC (2.0) from TCP Bytes or deparse JSON-RPC to Codec and Bytes"
repository = "https://github.com/sunhuachuang/jsonrpc-parse"
keywords = ["jsonrpc", "codec", "jsonrpc-parse", "jsonrpc-codec"]
license = "MIT"

[dependencies]
http = "0.1"
httparse = "1.0"
bytes = "0.4"
byteorder = "1.2"
tokio-codec = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
